--- a/styles.css
+++ b/styles.css
@@ -732,7 +732,15 @@ popup-colonia .leaflet-popup-close-button {
 #tablaColonias tbody tr.selected-row {
   background-color: #fff3cd !important;
 }
-
+#tablaColonias th select,
+#tablaColonias th input {
+  width: 100%;
+  margin-top: 4px;
+  padding: 3px 4px;
+  font-size: 11px;
+  border-radius: 4px;
+  border: 1px solid #cccccc;
+}
 /* Filtros */
 
 .filters-row th {
